@@ -94,7 +94,7 @@
     ;;	    (string-append (basename name ".ps") "-page1.png" )))
   (let ((paper-size (sanitize-command-option paper-size-name))
 	(verbose (ly:get-option 'verbose))
-	(rename-page-1 #t))
+	(rename-page-1 #f))
     (ly:message (_ "Converting to ~a...") "PNG")
     (make-ps-images name resolution paper-size rename-page-1 verbose)
     (ly:progress "\n")))
